--- a/index.html
+++ b/index.html
@@ -28,16 +28,23 @@
                 <canvas id="next-canvas"></canvas>
             </div>
         </div>
-        <div id="score">
-             <div class="title">
-                    <h3>Score</h3>
-             </div>
-             <div id="score-info">
-                 <hr>
-                <p id="time">Time: 0 seconds</p>
-                <p id="rows">Eliminated rows: 0</p>
-                <p id="points">Points: 0</p>
-                <p id="level">Nível: 1</p>
+    </div>
+    <div id="score">
+         <div class="title">
+                <h3>Score</h3>
+         </div>
+         <div id="score-info">
+             <hr>
+            <p id="Time">Time: 0 seconds</p>
+            <p id="rows">Eliminated rows: 0</p>
+            <p id="Points">Points: 0</p>
+            <p id="Level">Nível: 1</p>
+            <hr>
+         </div>
+    </div>
+    <div id="hold">
+        <div class="title">
+                <h3>Holded Piece</h3>
                 <hr>
              </div>
         </div>
